--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "",
+    "test": "node test/app.test.js",
     "start": "supervisor bin/www"
   },
   "author": "",
