”完善docker启动配置，构建容器时执行爬虫，启动容器时自动运行nodejs程序“

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha -t 1000",
-    "start": "supervisor bin/www"
+    "start": "node bin/www"
   },
   "author": "",
   "license": "ISC",
